# trajectory

./: .gitignore  README.md  main.py  pyproject.toml
experiments/cutting_baseline/: config.toml
experiments/cutting_c/: config.toml
experiments/cutting_spline/: config.toml
experiments/cutting_spline_rnn/: config.toml
experiments/federated_vs_centralized/: config.toml
outputs/models/centralized/: federated_vs_centralized.pt  federated_vs_centralized_metrics.json
outputs/runs/cutting_baseline_20260519_131638/: config.json
outputs/runs/cutting_baseline_20260519_131659/: metrics.json
outputs/runs/cutting_spline_20260520_134519/: config.json  metrics.json
outputs/runs/cutting_spline_20260621_135734/: config.json
outputs/runs/cutting_spline_20260621_135950/: metrics.json
outputs/runs/cutting_spline_rnn_20260622_114041/: config.json  metrics.json
outputs/runs/federated_vs_centralized_comparison_20260622_121229/: metrics.json
outputs/runs/federated_vs_centralized_comparison_20260622_121502/: config.json  metrics.json
scripts/: compare_fl_vs_centralized.py  train_centralized.py  visualize.py  visualize_dataset.py
src/: trajectories.py
src/surgical-fl/data/: datasets.py
src/surgical-fl/visualization/: visualize.py
src/surgical_fl/data/: builders.py  datasets.py
src/surgical_fl/models/: base.py  registry.py
src/surgical_fl/training/: trainer.py
src/surgical_fl/utils/: config.py  run_io.py  (+1 more)
tests/: conftest.py  test_datasets.py  test_factory.py  test_federation.py  test_generators.py  test_models.py  test_registries.py  test_skills.py
(+34 files in other folders)
